--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,22 +2,37 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.ps.petappfe">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        tools:ignore="GoogleAppIndexingWarning"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        android:usesCleartextTraffic="true"
+        tools:ignore="GoogleAppIndexingWarning">
 
 
-        <activity android:name=".DashboardActivity"></activity>
-        <activity android:name=".LoginActivity"></activity>
+        <activity android:name=".DashboardActivity" />
+        <activity android:name=".LoginActivity" />
+        <activity android:name=".CreateUserActivity"
+            tools:ignore="Instantiatable,MissingClass" />
 
-        <activity android:name=".SplashActivity"
+        <activity
+            android:name=".FirstFragment"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".SecondFragment"
+            tools:ignore="Instantiatable" />
+        <activity
+            android:name=".ThirdFragment"
+            tools:ignore="Instantiatable" />
+
+
+        <activity
+            android:name=".SplashActivity"
             tools:ignore="Instantiatable">
             android:exported="true">
             <intent-filter>
@@ -25,7 +40,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
 
         <meta-data
